--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,9 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
   </head>
 
   <body>
@@ -23,6 +25,18 @@
           <% end %>
         </ul>
         <ul class="nav navbar-nav">
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Sort <span class="caret"></span></a>
+
+              <ul class="dropdown-menu" role="menu">
+                <% Category.all.each do |category| %>
+                  <li class="<%= 'active' if params[:category] == category.name %>">
+                    <%= link_to category.name, plays_path(category: category.name), class: "link" %>
+                  </li>
+                <% end %>
+              </ul>
+            </li> 
+
           <% if user_signed_in? %>
             <li><%= link_to "Add Play", new_play_path %></li>
           <% end %>
